// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`misc functions debug! debug value. 1`] = `
"*** LITS DEBUG ***
{
  "λ": true,
  "t": 301,
  "o": [
    {
      "as": {
        "mandatoryArguments": [
          "%1"
        ]
      },
      "a": 1,
      "b": [
        {
          "t": 203,
          "n": ">",
          "p": [
            {
              "t": 205,
              "v": "%1"
            },
            {
              "t": 201,
              "v": 2
            }
          ]
        }
      ],
      "f": {}
    }
  ]
}
"
`;

exports[`misc functions debug! debug value. 2`] = `
"*** LITS DEBUG ***
{
  "λ": true,
  "d": {
    "code": "(debug! #(> %1 2))",
    "line": 1,
    "column": 9,
    "filePath": ""
  },
  "t": 301,
  "o": [
    {
      "as": {
        "mandatoryArguments": [
          "%1"
        ]
      },
      "a": 1,
      "b": [
        {
          "t": 203,
          "n": ">",
          "p": [
            {
              "t": 205,
              "v": "%1",
              "tkn": {
                "t": 103,
                "v": "%1",
                "d": {
                  "code": "(debug! #(> %1 2))",
                  "line": 1,
                  "column": 13,
                  "filePath": ""
                }
              }
            },
            {
              "t": 201,
              "v": 2,
              "tkn": {
                "t": 102,
                "v": "2",
                "d": {
                  "code": "(debug! #(> %1 2))",
                  "line": 1,
                  "column": 16,
                  "filePath": ""
                }
              }
            }
          ],
          "tkn": {
            "t": 103,
            "v": ">",
            "d": {
              "code": "(debug! #(> %1 2))",
              "line": 1,
              "column": 11,
              "filePath": ""
            }
          }
        }
      ],
      "f": {}
    }
  ]
}
"
`;

exports[`misc functions debug! multiple contexts 1`] = `
"*** LITS DEBUG ***
Context 0
  z  10

Context 1
  <empty>

Context 2 - Global context
  x     10
  foo   <301 function foo>
  bar   <301 function λ>
  plus  <310 function +>


"
`;

exports[`misc functions debug! multiple contexts 2`] = `
"*** LITS DEBUG ***
Context 0
  z  10

Context 1
  <empty>

Context 2 - Global context
  x     10
  foo   <301 function foo>
  bar   <301 function λ>
  plus  <310 function +>


"
`;
